# games

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .ignore  CLAUDE.md  Dockerfile  Makefile  README.rst  doc.rst  docker-compose.yml  docker.env  docker_secrets.env.tpl  env.sh  env_custom.sh.tpl  env_secrets.sh.tpl  help.mk  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: db_backup.yaml  deployment.yaml  destruction.yaml  remove_unused_games.yaml  reusable_restart_app.yaml  reusable_test.yaml  update_games_data.yaml  update_github_actions.yaml
deployment/: configmap.yaml  deployment.yaml  ingress_backend.yaml  ingress_frontend.yaml  service_backend.yaml  service_frontend.yaml
frontend/: .eslintrc.json  .prettierignore  Dockerfile  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.vue  axios.ts  const.ts  env.d.ts  helpers.ts  main.ts  router.ts  toast.ts  types.ts
frontend/src/__tests__/: helpers.test.ts
frontend/src/components/: ActionButton.vue  DarkModeToggle.vue  Footer.vue  FooterComponent.vue  FooterView.vue  GameCard.vue  GameCategory.vue  GameCover.vue  GameSearchResultCard.vue  GameTitle.vue  GamesList.vue  GamesLists.vue  GamesSettings.vue  GamesTabs.vue  GamesToolbar.vue  GamesUserBar.vue  ListWindowItem.vue  Menu.vue  MenuComponent.vue  MenuItem.vue  MenuView.vue  SettingsSwitch.vue  ToolbarButton.vue  common.ts  types.ts
frontend/src/components/__tests__/: GameCard.test.ts  GamesSettings.test.ts
frontend/src/composables/: addToList.ts  formValidation.ts  mobile.ts  theme.ts  types.ts
frontend/src/composables/__tests__/: formValidation.test.ts
frontend/src/mixins/: addToList.ts  mobile.ts
frontend/src/plugins/: vuetify.ts  webfontloader.ts
frontend/src/stores/: auth.ts  games.ts  settings.ts  types.ts
frontend/src/stores/__tests__/: auth.test.ts
frontend/src/styles/: gameCategory.css  gameCover.scss  main.scss  styles.scss  transitions.scss  userGames.scss  utils.scss
frontend/src/test/: setup.ts
frontend/src/views/: AboutView.vue  ChangePasswordView.vue  GamesView.vue  LoginView.vue  LogoutView.vue  RecommendationsView.vue  RegistrationView.vue  ResetPasswordRequestView.vue  ResetPasswordView.vue  SearchView.vue  UserGamesView.vue  UserPreferencesView.vue  UsersView.vue  types.ts
ios/: README.md
ios/GamesApp/: APIService.swift  ContentView.swift  GameListView.swift  GamesApp.swift  Info.plist  LoginView.swift  Models.swift  SearchView.swift
ios/GamesApp.xcodeproj/: project.pbxproj
ios/GamesApp.xcodeproj/xcshareddata/xcschemes/: GamesApp.xcscheme
ios/GamesApp/Assets.xcassets/AccentColor.colorset/: Contents.json
scripts/: docker_build_backend.sh  docker_build_frontend.sh  docker_test.sh
src/: manage.py
src/games/: __init__.py  admin.py  apps.py  exceptions.py  models.py  test_models.py  types.py  utils.py
src/games/fixtures/: categories.json  lists.json
src/games/igdb/: __init__.py  igdb.py  token_cache.py  types.py
src/games/management/commands/: remove_unused_games.py  update_games_data.py
src/games/migrations/: 0001_initial.py  0002_game_listmodel_record_record_unique_user_game_record.py  0003_category_game_category.py  0004_alter_category_options_alter_list_options_and_more.py  0005_alter_list_options.py  0006_alter_user_options.py  0007_record_rating_constraint.py
src/games/openai/: __init__.py  client.py  types.py
src/games/tests/: __init__.py  test_admin.py  test_igdb.py  test_management_commands.py  test_models.py  test_openai_client.py  test_settings.py  test_views.py
src/games/views/: __init__.py  common.py  games.py  health.py  recommendations.py  records.py  search.py  user.py  users.py
src/games_project/: __init__.py  asgi.py  settings.py  settings_tests.py  urls.py  wsgi.py
