[tool.black]
line-length = 119
target-version = ['py310']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    __pycache__
    | \.hypothesis
    | \.idea
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | \.vscode
    | migrations
    | node_modules
    | htmlcov
/)
'''

[tool.poetry]
name = "games"
version = "0.0.0"
description = ""
authors = ["Anton Samarchyan <desecho@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"

# Django
Django = "^4.1"
django-tqdm = "^1.3.1"
django-stubs-ext = "^0.5.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"

mysqlclient = "^2.1.1"
sentry-sdk = "^1.9.1"
gunicorn = "^20.1.0"
typing-extensions = "^4.3.0"
igdb-api-v4 = "^0.0.5"
Authlib = "^1.0.1"
pip = "^22.2.2"
django-rest-registration = "^0.7.2"

[tool.poetry.dev-dependencies]
# Pytest
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
pytest-mock = "*"
pytest-django = "*"

# Django
django-test-without-migrations = "*"

# Linting
pylint = "*"
isort = "*"
flake8 = "*"
bandit = "*"
pydiatra = "*"
pydocstyle = "*"
safety = "*"
autoflake = "*"
black = "*"
restructuredtext_lint = "*"
mypy = "*"
pygments = "*" # For syntax highlighting in code examples

# Stubs
django-stubs = "*"
djangorestframework-stubs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
