[project]
name = "games"
version = "0.0.0"
description = "Games is a game list and tracking app built with Django."
authors = [{name = "Anton Samarchyan", email = "desecho@gmail.com"}]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    # Django
    "Django>=5.2.4,<6.0.0",
    "django-tqdm>=1.3.1,<2.0.0",
    "django-stubs-ext>=5.1.0,<6.0.0",
    "djangorestframework>=3.13.1,<4.0.0",
    "djangorestframework-simplejwt>=5.2.0,<6.0.0",
    "django-cors-headers>=4.4.0,<5.0.0",
    "django-rest-registration>=0.9.0,<0.10.0",
    "requests>=2.33.1,<3.0.0",

    "mysqlclient>=2.2.0,<3.0.0",
    "sentry-sdk>=2.14.0,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "typing-extensions>=4.3.0,<5.0.0",
    "igdb-api-v4>=0.3.3,<0.4.0",
    "Authlib>=1.0.1,<2.0.0",
    "openai>=1.0.0,<2.0.0",
    "pip>=25.2,<26.0.0",
]

[dependency-groups]
dev = [
    # Pytest
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-mock",
    "pytest-django",

    # Django
    "django-test-without-migrations",

    # Linting
    "ruff",
    "safety",
    "restructuredtext_lint",
    "mypy",
    "pygments", # For syntax highlighting in code examples

    # Stubs
    "django-stubs",
    "djangorestframework-stubs",
    "types-requests",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 119
target-version = "py311"
extend-exclude = ["src/games/migrations"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
python_files = ["test_*"]
DJANGO_SETTINGS_MODULE = "games_project.settings_tests"
addopts = "--cov-report xml --cov-report term-missing --cov src --nomigrations -vv"

[tool.mypy]
mypy_path = "src"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
namespace_packages = true
disallow_subclassing_any = false
warn_no_return = true
warn_unreachable = true
local_partial_types = true
pretty = true
strict = true
exclude = '''(?x)(
    ^src/games/tests |
    ^src/games/migrations
    )'''

[tool.django-stubs]
django_settings_module = "games_project.settings"

[[tool.mypy.overrides]]
module = ["igdb.*", "authlib.*", "rest_framework_simplejwt.*"]
ignore_missing_imports = true
